[gd_scene load_steps=3 format=3 uid="uid://dys6mh3leei73"]

[ext_resource type="Script" path="res://Menu Scripts/CasteMenu.gd" id="1_wc44j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a6s66"]
bg_color = Color(0.415686, 0.14902, 0.541176, 1)

[node name="CasteMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wc44j")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1159.0
offset_bottom = 654.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a6s66")

[node name="TitleText" type="Label" parent="."]
layout_mode = 0
offset_left = 538.0
offset_top = 31.0
offset_right = 584.0
offset_bottom = 57.0
text = "Title"

[node name="TitleInput" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 415.0
offset_top = 77.0
offset_right = 705.0
offset_bottom = 128.0

[node name="DescriptionText" type="Label" parent="."]
layout_mode = 0
offset_left = 502.0
offset_top = 161.0
offset_right = 617.0
offset_bottom = 190.0
text = "Description
"

[node name="DescriptionInput" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 404.0
offset_top = 198.0
offset_right = 707.0
offset_bottom = 335.0

[node name="SelectionButton" type="Button" parent="."]
layout_mode = 0
offset_left = 307.0
offset_top = 365.0
offset_right = 532.0
offset_bottom = 405.0
text = "Create/Edit Caste Selections"

[node name="RightButton" type="Button" parent="."]
layout_mode = 0
offset_left = 612.0
offset_top = 366.0
offset_right = 806.0
offset_bottom = 404.0
text = "Create/Edit Caste Rights"

[node name="CreateButton" type="Button" parent="."]
layout_mode = 0
offset_left = 585.0
offset_top = 554.0
offset_right = 694.0
offset_bottom = 601.0
text = "Create Caste"

[node name="CancelButton" type="Button" parent="."]
layout_mode = 0
offset_left = 453.0
offset_top = 560.0
offset_right = 547.0
offset_bottom = 600.0
text = "Cancel"

[node name="RulingClassCheck" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 380.0
offset_top = 430.0
offset_right = 538.0
offset_bottom = 502.0
text = "Ruling Class"

[node name="LowerClassCheck" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 587.0
offset_top = 432.0
offset_right = 742.0
offset_bottom = 507.0
text = "Lower Class"

[connection signal="pressed" from="SelectionButton" to="." method="_on_selection_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="RulingClassCheck" to="." method="_on_ruling_class_check_pressed"]
[connection signal="pressed" from="LowerClassCheck" to="." method="_on_lower_class_check_pressed"]
